# bagijawaban

./: .gitignore  Dockerfile  package-lock.json  pyproject.toml  tailwind.config.js
migrations/: 20072024_add_short_description.py
scripts/: insert_from_dir.py  pdf_to_md.py
src/: app.py  db.py  models.py  s3.py  utils.py
src/components/: button.py  card.py  collapse.py  flash.py  layout.py  solution.py  table.py
src/css/: style.css
src/pages/: index.py
src/pages/auth/: login.py  logout.py
src/pages/course/: index.py
src/pages/course/[course_id]/assignment/: index.py
src/pages/course/[course_id]/assignment/[assignment_id]/: index.py  submit.py
src/providers/: auth.py
static/css/: style.css
